2003-09-24  Bernie Solomon  <bernard@ugsolutions.com>

        * mono/tests/pinvoke*.cs, delegate4.cs, marshal10.cs, marshal4.cs
          marshal5.cs: remove .so from DllImport of libtest to aid portability.

2003-09-08  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added check for valgrind headers.

2003-09-03  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Use $(MAKE) in even more places. Patch by Bernie Solomon
	(bernard@ugsolutions.com).
	
2003-08-27  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Use $(MAKE) instead of make. Patch by Bernie Solomon
	(bernard@ugsolutions.com).

2003-08-25  Zoltan Varga  <vargaz@freemail.hu>

	* mono.pc.in: Added gthread-2.0.

2003-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added gthread-2.0 to GLIB_CFLAGS and GLIB_LIBS, so we
	can call g_thread_init ().

2003-08-21  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/threadpool.cs mono/tests/threadpool1.cs: Make increments 
	of static variables atomic. Fixes bug #47683.

2003-08-21  Johannes Roith  <johannes@jroith.de>

	* mono/Makefile.am: small update. make sure, glib makes it in the build, add optional target for dependencies

2003-08-18  Johannes Roith  <johannes@jroith.de>

	* mono/Makefile.am: add windows build option
	* mono/monowiz.win32.nsi: add windows build script
	* mono/mono-win32-light.bmp: add bitmap

2003-08-16  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/checked.cs: Added mul.ovf tests.

2003-08-15  Duncan Mak  <duncan@ximian.com>

	* doc/mysql: Change references to ByteFX.Data.MySQLClient to the
	correct ByteFX.Data.MySqlClient (note the change in
	capitalization). Thanks to Tom Wagner <Tom.Wagner@wacker.com> for
	spotting the error.

2003-08-15  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/bug-47295.cs: Regression test for bug #47295.

2003-08-11  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am (assemblies_DATA): Add Mono.Cairo.dll.

Sun Aug  3 21:12:13 BST 2003 Malte Hildingson <malte@amy.udd.htu.se>
